fix green contrast on previous page

--- a/app/assets/stylesheets/ui-components/mahc-theme.scss
+++ b/app/assets/stylesheets/ui-components/mahc-theme.scss
@@ -578,3 +578,7 @@ thead {
 .white {
   color: #ffffff !important;
 }
+
+.black {
+  color: var(--primary-black, #ffffff) !important;
+}
